--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/jest": "^24.0.13",
     "@types/node": "12.0.4",
     "@types/react": "16.8.19",
+    "@types/react-bootstrap": "^0.32.19",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.3",
     "@types/react-transition-group": "^2.9.1",
@@ -13,6 +14,7 @@
     "firebase": "^6.2.0",
     "firebase-tools": "^7.0.0",
     "global": "^4.4.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
