--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
   },
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
+    "@testing-library/user-event": "^4.1.0",
     "@types/enzyme": "^3.9.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/testing-library__user-event": "^4.1.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest-dom": "^3.5.0",
