--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "global": "^4.4.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-ace": "^7.0.2",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
