--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "12.0.4",
-    "@types/react": "16.8.19",
-    "@types/react-bootstrap": "^0.32.19",
-    "@types/react-dom": "16.8.4",
-    "@types/react-router-dom": "^4.3.3",
-    "@types/react-transition-group": "^2.9.1",
+    "@types/jest": "^24.0.23",
+    "@types/node": "12.12.8",
+    "@types/react": "16.9.11",
+    "@types/react-bootstrap": "^0.32.20",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/react-transition-group": "^4.2.3",
+    "@types/underscore": "^1.9.4",
     "bootstrap": "^4.3.1",
-    "firebase": "^6.2.0",
-    "firebase-tools": "^7.2.2",
-    "formik": "^1.5.7",
+    "firebase": "^7.4.0",
+    "firebase-tools": "^7.7.0",
+    "formik": "^2.0.4",
     "global": "^4.4.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-ace": "^7.0.2",
-    "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
-    "react-test-renderer": "^16.8.6",
-    "react-transition-group": "^4.1.0",
-    "typescript": "^3.5.1",
-    "yarn": "^1.16.0",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-ace": "^8.0.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.12.0",
+    "react-transition-group": "^4.3.0",
+    "typescript": "^3.7.2",
+    "underscore": "^1.9.1",
+    "yarn": "^1.19.1",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -50,15 +52,15 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^8.0.1",
-    "@testing-library/user-event": "^4.1.0",
-    "@types/enzyme": "^3.9.3",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/react-test-renderer": "^16.8.1",
-    "@types/testing-library__user-event": "^4.1.0",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/testing-library__user-event": "^4.1.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "jest-dom": "^3.5.0",
-    "ts-jest": "^24.0.2"
+    "enzyme-adapter-react-16": "^1.15.1",
+    "ts-jest": "^24.1.0"
   }
 }
