--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "test:coverage": "set CI=true && react-scripts test --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
